<resources>
    <string name="app_name">Color Calendar</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="add_button">Add</string>

    <string name="profile_name">Name</string>

    <string name="pick_time">Pick time</string>
    <string name="entry_time">%02d:%02d</string>

    <string name="delete_profile">Delete profile</string>
    <string name="new_profile">New profile</string>
    <string name="profile_name_edit">Profile name</string>
    <string name="add_profile">Add profile</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="import_dialog_title">Confirm import</string>
    <string name="import_name_conflict">Name conflict!</string>
    <string name="profile_edit_date">Select start date.</string>

    <string name="calendar_rows_summary">Number of columns in each calendar row</string>
</resources>